--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,26 +18,29 @@
       </li>
       <li class="nav-item">
         <h5>
-        <a class="nav-link"  routerLink="/home" routerLinkActive="active"><i class="fas fa-home p-2"></i>Home</a>
+        <a class="nav-link"  routerLink="/home" routerLinkActive="active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"><i class="fas fa-home p-2"></i>Home</a>
         </h5>
       </li>
-      <li class="nav-item">
+      <li class="nav-item" *ngIf="username==null">  
         <h5>
-        <a class="nav-link"  routerLink="/login" routerLinkActive="active"><i class="fas fa-sign-in-alt p-2"></i>Login</a>
+        <a class="nav-link"  routerLink="/login" routerLinkActive="active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"><i class="fas fa-sign-in-alt p-2"></i>Login</a>
         </h5>
       </li>
-      <li class="nav-item">
+      
+      <li class="nav-item" *ngIf="username==null">
         <h5>
-        <a class="nav-link" routerLink="/register" routerLinkActive="active"><i class="fas fa-align-left p-2"></i>Register</a>
+        <a class="nav-link"  routerLink="/register" routerLinkActive="active" data-bs-toggle="collapse" data-bs-target=".navbar-collapse.show"><i class="fas fa-align-left p-2"></i>Register</a>
         </h5>
-      </li>
-     
+      </li> 
+    
+      
     </ul>
     
   </div>
 
 </nav>
-<div class="bg-light text-center" *ngIf="username!=null">
+
+ <div class="bg-light text-center" *ngIf="username!=null"> 
     <h3><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
       
         <a routerLink="" (click)="showUserCart()">
@@ -47,22 +50,24 @@
                 </sup>
             </h4>
         </a>
-        <a routerLink="" (click)="showorders()" class="m-5">My Orders<h4 class="fas fa-list-alt text-info text-center mt-3">
+        <a routerLink="" (click)="showorders()" class="m-5" style="text-decoration: none;">My Orders<h4 class="fas fa-list-alt text-info text-center mt-3">
           <sup class="text-info float-end">
             {{userOrderSize}}
         </sup>
         </h4>
          
       </a>
-      <a routerLink="" (click)="showwishlist()" class="m-5">WishList</a>
+      <a routerLink="" (click)="showwishlist()" class="m-5" style="color: darkmagenta;text-decoration: none;"><h5 class="fas fa-heart m-1"></h5>WishList</a>
        
     <button class=" btn btn-success px-4 float-end" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
 
   </div>
 
+
   
+    
   <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
-    <ol class="carousel-indicators">
+    <ol class="carousel-indicators ">
       <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
       <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
@@ -89,6 +94,16 @@
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
     </a>
+  </div>
+  <div class="border d-flex align-items-center justify-content-center" *ngIf="spinning==0" style="height: 550px;">
+        
+      
+    <div class="spinner-border text-danger" role="status" >
+        
+      <span class="visually-hidden">Loading...</span>
+     
+    </div>
+    <div><h2>  Loading.... please wait</h2></div>
   </div>
   <div class="container-fluid my-5">
     <div class="row">
@@ -126,18 +141,16 @@
               </ul>  
             </nav>   
         </div>
-    
-
-  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 1%;">
+  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 1%;" *ngIf="spinning==1">
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="!cat">
        <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
             <div class="col">
               <div class="card border-success mb-3 mt-3" style="border-radius: 5%;height: 35rem;">
                 <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title text-center">{{p.productname}}</h5>
+                    <h5 class="card-title text-center" style="color: darkmagenta;">{{p.productname}}</h5>
                     <h5 class="card-text text-center">{{p.brand}}</h5>
-                
+                   
                     <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
                     <h5 class="card-text text-center">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></h5>
                     
@@ -145,7 +158,7 @@
                   <div class="card-footer bg-transparent border-success">
                         <div>
                           <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View</a>
-                          <a class="btn btn-primary " style="float: right;margin: 10px;" (click)="wishlist(i)"><h5 class="fas fa-heart"></h5>Wish</a>
+                          <a class="btn btn-primary " style="float: right;margin: 10px;" (click)="wishlist(i)"><h5 class="fas fa-heart "></h5>Wish</a>
            
                         </div>
                         <div>
@@ -163,7 +176,7 @@
              <div class="card border-success mb-3 mt-3" style="border-radius: 5%;height: 35rem;">
                <img [src]=p.productImgLink class="card-img-top mx-auto mt-2" style="height: 200px;width:200px;" alt="...">
                  <div class="card-body">
-                   <h5 class="card-title text-center">{{p.productname}}</h5>
+                   <h5 class="card-title text-center" style="color: darkmagenta;">{{p.productname}}</h5>
                    <h5 class="card-text text-center">{{p.brand}}</h5>
                
                    <h5 class="card-text text-center">{{(p.cost)| currency:"INR"}}</h5>
@@ -172,8 +185,10 @@
                  </div>
                  <div class="card-footer bg-transparent border-success">
                        <div>
-                         <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View Product</a>
-                       </div>
+                         <a  class="btn btn-warning" style="float: left;margin: 10px;" (click)="viewitem(p)"><h5 class="fas fa-eye m-1"></h5>View</a>
+                         <a class="btn btn-primary " style="float: right;margin: 10px;" (click)="wishlist(i)"><h5 class="fas fa-heart "></h5>Wish</a>
+           
+                        </div>
                        <div>
                          <a   class="btn btn-info" style="float:right;margin: 10px;color: darkmagenta;" (click)="additem(i)">Add to Cart<h5 class="fas fa-cart-arrow-down m-1"></h5></a>
                        </div>
