--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,7 +2,6 @@
 <body style="background-image: url('https://i.pinimg.com/originals/0c/64/b8/0c64b866e848e0cacb94466619d02583.jpg');background-repeat: no-repeat;background-size: cover;width: 100%;" >
     <div class="text-right bg-light px-5" style="height: 100px;">
         <h3 class="text-center d-1 pr-5"><h4 class="fas fa-user text-info p-2"></h4>{{username}}</h3>
-        <!-- <a routerLink="/admincomp" style="color: darkmagenta;text-decoration:none;margin-right: auto;"  routerLinkActive="active"><b>Add Products </b></a> -->
          <a routerLink="/allproducts" style="color: darkmagenta;text-decoration: none;padding-left: 10px;" routerLinkActive="active"><b>All Products</b> </a> 
        
         <button class="btn btn-success float-end ml-3" (click)="logout()"><h6 class="fas fa-sign-out-alt m-1"></h6><b>Logout</b></button>
@@ -49,7 +48,7 @@
                 
             </div>
             <div class="form-group col-md-5">
-                <label>Quantity</label>
+                <label><b>Quantity</b></label>
                 <input type="number" class="form-control" name="quantity" formControlName="quantity" placeholder="Enter quantity" >
                 <!-- <p class="text text-danger" *ngIf="getcontrol().pquantity.errors?.required && getcontrol().pquantity.touched">Quantity is required</p> -->
                 
