--- a/src/app/usercart/usercart.component.html
+++ b/src/app/usercart/usercart.component.html
@@ -11,69 +11,85 @@
      
       <h4 class="fas fa-list-alt text-info text-center" style="text-align: center;">My Orders ({{userOrderSize}})</h4>
    </a>
+ 
     <div class="container-fluid p-3 " *ngIf="cart.length!==0"> 
       <h3>Total Price:<strong>{{amount | currency:"INR"}}</strong></h3>
     </div>
-    <div class="card mb-3" *ngFor="let p of cart, let i=index" style="max-width: 700px;max-height: 100%;">
-        <div class="row">
-          <div class="col-md-4">
-            <img [src]=p.productImgLink class="card-img-top" style="width: 100%;" alt="..."> 
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title"><b>{{p.productname}}</b></h5>
-               <p class="card-title">Product ID : {{p.productID}}</p> 
-               <p class="card-title">Brand: {{p.brand}}</p>  
-               <p class="card-title">Colour:{{p.colour}}</p> 
-               <p class="card-title">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></p>
-              <!-- <p class="card-title">Cost : {{(p.cost)| currency:"INR"}}</p>  -->
-              <p class="card-title price" *ngIf="p.status=='Available'">Price: {{p.cost | currency:"INR"}}</p>
-              <p class="card-title price" *ngIf="p.status=='Unavailable'">Price: <strike>{{p.cost | currency:"INR"}}</strike></p>
-            
-              <p class="card-title">Product Description : {{p.description}}</p> 
+  
+   
+
+    <div class="container-fluid">
+      
+       <div class="row mt-5 gx-3 d-block mx-auto">
+        <div class="col-md-7 col-lg-9 col-9 mx-auto mb-lg-0 mb-5">
+      <div class="card p-4 d-block mx-auto m-3" *ngFor="let p of cart, let i=index" style="max-width: 1000px;max-height: 100%;">
+          <div class="row">
+            <div class="col-md-5 col-11 mx-auto bg-light d-flex justify-content-center align-items-center"  >
+              <img [src]=p.productImgLink  style="width: 200px; height: 200px;" alt="..."> 
+            </div>
+            <div class="col-md-7 col-11 mx-auto px-4 mt-2">
+              <div class="card-body">
+                <div class="row">
+                <h4 class="card-title">{{p.productname}}</h4> 
+                <p class="card-title">Brand: <b>{{p.brand}}</b></p> 
+                <p class="card-title">Colour : <b>{{p.colour}}</b></p> 
+                <p class="card-title">Rating:<ngb-rating [max]="5" [rate]="p.rating" [readonly]="true"></ngb-rating></p>
+                <p class="card-title price" *ngIf="p.status=='Available'">Price: {{p.cost | currency:"INR"}}</p>
+                <p class="card-title price" *ngIf="p.status=='Unavailable'">Price: <strike>{{p.cost | currency:"INR"}}</strike></p>
+                <p class="card-title">Product Description : {{p.description}}</p> 
                 <div class="col-5">
                      
-                <ul class="pagination justify-content-end set_quantity ">
-                  <li class="page-item">
-                    <button class="page-link" href="#" (click)="incr(p)"><i class="fa fa-plus" aria-hidden="true"></i>  </button>
-                  </li>  
-              
-                          <span class="text-center p-1" >{{p.quantity}}</span>
-
-                   
-                     
-                   
-                  <li class="page-item">
-                    <button class="page-link" href="#" (click)="decr(p)"><i class="fa fa-minus" aria-hidden="true"></i>
-                    </button>
-                  </li>    
-                   </ul>
+                  <ul class="pagination justify-content-end set_quantity ">
+                    <li class="page-item">
+                      <button class="page-link" href="#" (click)="incr(p)"><i class="fa fa-plus" aria-hidden="true"></i>  </button>
+                    </li>  
                 
+                            <span class="text-center p-1" >{{p.quantity}}</span>
+  
+                     
+                       
+                     
+                    <li class="page-item">
+                      <button class="page-link" href="#" (click)="decr(p)"><i class="fa fa-minus" aria-hidden="true"></i>
+                      </button>
+                    </li>    
+                     </ul>
                   
-            </div>
-            <div class="row mt-3">
-              <!-- <span class="float-end text-muted" *ngIf="p.status=='Available'">Status: {{p.status}}</span> -->
-              <span class="float-end text-danger" *ngIf="p.status=='Unavailable'">Product {{p.status}}</span>
-            
-            </div>
-            <div class="row mt-3">
-              <div class="col-sm-6 col-md-6">
-                <td class="text-center"><button class="btn btn-success p-2 mt-1" style="display: block; width: 100%;" [disabled]="p.status=='Unavailable'" (click)="additem(i)">Purchase</button></td>
-            </div>
-              <div class="col-sm-6 col-md-6">
-                <p class="card-title"><button class="btn btn-danger" (click)="delete(i)"><h5 class="fas fa-times-circle"></h5>Delete</button></p>
-         
+                    
               </div>
-            
-           </div>
-          
-
-             
-           
                  </div>
+  
+               
+              
+                <div class="row mt-3">
+                  <div class="row mt-3">
+                    <!-- <span class="float-end text-muted" *ngIf="p.status=='Available'">Status: {{p.status}}</span> -->
+                    <span class="float-end text-danger" *ngIf="p.status=='Unavailable'">Product {{p.status}}</span>
+                  
+                  </div>
+                  <div class="row mt-3">
+                    <div class="col-sm-6 col-md-6">
+                      <td class="text-center"><button class="btn btn-success p-2 mt-1" style="display: block; width: 100%;" [disabled]="p.status=='Unavailable'" (click)="additem(i)">Purchase</button></td>
+                  </div>
+                    <div class="col-sm-6 col-md-6">
+                      <p class="card-title"><button class="btn btn-danger" (click)="delete(i)"><h5 class="fas fa-times-circle"></h5>Delete</button></p>
+               
+                    </div>
+                  
+                 </div>
+                   
+               </div>
+  
+              
+           
+            </div>
           </div>
         </div>
-      </div>
+  </div>
+  </div>
+  </div>
 
- 
-</div>
+
+
+
+   
