--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -101,3 +101,55 @@
     </div>
     
 </div>
+<div class="container-fluid border-top-1 " style="border-top: 1px solid white;background-color: black;">
+    <div class="row">
+        <section class="col-sm-2 pt-3 mt-3 mb-3">
+            <ul class="two">
+                <li >
+                    <i class="fas fa-shopping-bag text-warning"></i> Sell On Flipkart
+                </li>
+                </ul>
+        </section>
+           <section class="col-sm-2 pt-3 pt-3 mt-3 mb-3">
+            <ul class="two">
+                <li>
+                  <i class="fas fa-star text-warning"></i> Advertise 
+                </li>
+                </ul>
+           </section>
+               <section class="col-sm-2 pt-3 mt-3 mb-3">
+                <ul class="two">
+                    <li>
+                        <i class="fas fa-gift text-warning"></i> GiftCards
+                    </li>
+                </ul>
+               </section>
+               
+            <section class="col-sm-2  pt-3 mt-3 mb-3">
+                <ul class="two">
+                    <li>
+                        <i class="fas fa-question-circle text-warning"></i>   HelpCenter
+                    </li>
+                </ul>
+            </section>
+            <section class="col-sm-2 pt-3 mt-3 mb-3">
+                <ul class="two">
+                    <li > 
+                        © 2007-2020 Flipkart.com
+        
+                    </li>
+                
+                </ul>
+            </section>
+            <section class="col-sm-2">
+                <ul class="two">
+                    <li>
+                        <img src="https://i.postimg.cc/pVJhzrWx/visa.jpg" class="pt-3 mt-3 mb-3" width="140px" height="60px">
+
+                    </li>
+                </ul>
+            </section>
+            
+        
+    </div>
+</div>
