--- a/src/app/admin/products/products.component.html
+++ b/src/app/admin/products/products.component.html
@@ -11,7 +11,17 @@
     </div>
 
     <h1 style="text-align: center;">All Products({{count}})</h1>
-   <div class="container mt-5 col-md-12">
+    <div class=" d-flex align-items-center justify-content-center" id="spin" *ngIf="spinner==true" style="height: 550px;">
+        
+      
+      <div class="spinner-border text-primary" role="status" >
+          
+        <span class="visually-hidden">Loading...</span>
+       
+      </div>
+      <div><h2 style="color:blue">  LOADING...</h2></div>
+    </div>
+   <div class="container mt-5 col-md-12" *ngIf="spinner==false">
     <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4">
       <div *ngFor="let p of products,let i=index">
          <div class="col">
