--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -95,15 +95,15 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div class="border d-flex align-items-center justify-content-center" *ngIf="spinning==0" style="height: 550px;">
+  <div class="d-flex align-items-center justify-content-center" *ngIf="spinner==true" style="height: 550px;">
         
       
-    <div class="spinner-border text-danger" role="status" >
+    <div class="spinner-border text-primary" role="status" >
         
       <span class="visually-hidden">Loading...</span>
      
     </div>
-    <div><h2>  Loading.... please wait</h2></div>
+    <div><h2 style="color: blue;">  LOADING...</h2></div>
   </div>
   <div class="container-fluid my-5">
     <div class="row">
@@ -141,7 +141,7 @@
               </ul>  
             </nav>   
         </div>
-  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 1%;" *ngIf="spinning==1">
+  <div class="container  col-md-10" style="background-color: turquoise;border-radius: 1%;" *ngIf="spinner==false">
      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 row-cols-lg-4" *ngIf="!cat">
        <div *ngFor="let p of products|search:searchTerm|search:category;let i=index" >
             <div class="col">
