--- a/src/app/placeorder/placeorder.component.html
+++ b/src/app/placeorder/placeorder.component.html
@@ -8,7 +8,18 @@
     
     <div class="container-fluid">
         <h1 class=" text-dark text-center mt-3">Orders of {{username}}</h1>
-        <div class="row mt-5 gx-3 d-block mx-auto">
+
+        <div class=" d-flex align-items-center justify-content-center" *ngIf="spinner==true" style="height: 550px;">
+        
+      
+          <div class="spinner-border text-primary" role="status" >
+              
+            <span class="visually-hidden">Loading...</span>
+           
+          </div>
+          <div><h2 style="color:blue">LOADING...</h2></div>
+        </div>
+        <div class="row mt-5 gx-3 d-block mx-auto" *ngIf="spinner==false">
           <div class="col-md-7 col-lg-9 col-9 mx-auto mb-lg-0 mb-5">
         <div class="card p-4 d-block mx-auto m-3" *ngFor="let p of order, let i=index" style="max-width: 1000px;max-height: 100%;">
             <div class="row">
