--- a/src/app/usercart/usercart.component.html
+++ b/src/app/usercart/usercart.component.html
@@ -15,10 +15,20 @@
     <div class="container-fluid p-3 " *ngIf="cart.length!==0"> 
       <h3>Total Price:<strong>{{amount | currency:"INR"}}</strong></h3>
     </div>
-  
+    <div class=" d-flex align-items-center justify-content-center" *ngIf="spinner==true" style="height: 550px;">
+        
+      
+      <div class="spinner-border text-primary" role="status" >
+          
+        <span class="visually-hidden">Loading...</span>
+       
+      </div>
+      <div><h2 style="color:blue">LOADING...</h2></div>
+    </div>  
+    
    
 
-    <div class="container-fluid">
+    <div class="container-fluid" *ngIf="spinner==false">
       
        <div class="row mt-5 gx-3 d-block mx-auto">
         <div class="col-md-7 col-lg-9 col-9 mx-auto mb-lg-0 mb-5">
